-
Bug
-
Resolution: Done
-
P2: Important
-
5.6
-
None
-
1bc9e17636f5fd0a4c86cba379f0060fe894b1bb
Try evaluating things like "5 + undefined" or "1/0". The result is always
{type: "number", value: null}. QtCreator should show something at least semi-useful even in that case and the V4 debugger should give more specific information to begin with.
| For Gerrit Dashboard: QTBUG-47880 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 188846,2 | V4 Debugger: Encode NaN and +/-Infinity as strings | 5.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |